[package]
name = "phoenix-blog-example"
description = "Executable example and feature tests for Phoenix"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
phoenix = { path = "../../crates/phoenix" }
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
