[package]
name = "phoenix-blog-example"
description = "Executable example and feature tests for Phoenix"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
phoenix = { version = "0.1.0", package = "phoenixrs", path = "../../crates/phoenix" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
