[package]
name = "phoenix-blog-example"
description = "Executable example and feature tests for Phoenix"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
phoenix = { version = "0.1.3", package = "phoenixrs", path = "../../crates/phoenix", features = ["sqlite", "password"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toasty.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
phoenix-testing = { version = "0.1.0", path = "../../crates/phoenix-testing" }

[lints]
workspace = true
